MultiTenantAPI/kubernetes/ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: multitenant-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: "*.demo1.jailscorp.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: multitenant-service
            port:
              number: 80
